# EmbeddedSystemsBuildScripts

./: .drone.yml  .gitignore  BUILD  BUILD.AvrToolchain.tpl  BUILD.CException  BUILD.CException.tpl  BUILD.CMock  BUILD.LUFA  BUILD.LUFA.tpl  BUILD.Unity  BUILD.Unity.tpl  CROSSTOOL  LICENSE  README.md  WORKSPACE  avr.bzl  cc_toolchain_config.bzl.tpl  department.bzl  dependencies.bzl  docs.bzl  external_dependencies.bzl  helpers.bzl  helpers.bzl.tpl  hex.bzl  platform_constraints.bzl.tpl  unity.bzl
AvrToolchain/: BUILD.tpl  avr.bzl  helpers.bzl.tpl
AvrToolchain/cc_toolchain/: avr-gcc.sh  cc_toolchain.bzl  cc_toolchain_config.bzl.tpl
AvrToolchain/host_config/: BUILD.tpl
Toolchains/: third_party.bzl  tools.bzl
Toolchains/Arm/: BUILD.bazel  BUILD.bazel.tpl  arm.bzl  cc_toolchain_config.bzl  common_definitions.bzl  helpers.bzl.tpl
Toolchains/Arm/cc_toolchain/: cc_toolchain.bzl  cc_toolchain_config.bzl.tpl
Toolchains/Avr/: BUILD  BUILD.tpl  avr.bzl  common_definitions.bzl  helpers.bzl.tpl
Toolchains/Avr/cc_toolchain/: cc_toolchain.bzl
Unity/: BUILD.bazel  rules.bzl  unity.bzl
config/: BUILD.tpl
constraints/: BUILD.tpl
docs/: AvrToolchain.rst  BazelSetup.rst  Unittest.rst  conf.py  index.rst  requirements.txt
example/: BUILD.bazel  avr-gcc.sh  cc_toolchain_config.bzl  main.c
example/test/: BUILD.bazel  test.c
host_config/: BUILD.tpl
host_constraints/: BUILD.tpl
host_platforms/: BUILD.tpl
