load("@Toolchains_Avr//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")
load("@Toolchains_Avr//:helpers.bzl", "default_embedded_binary")

default_embedded_binary(
    name = "main",
    srcs = ["main.c"],
    copts = cpu_frequency_flag(),
)

cc_binary(
    name = "normal_main",
    srcs = ["main.c"],
)

platform(
    name = "MyAVRPlatform",
    constraint_values = [
        "@Toolchains_Avr//platforms/mcu:atmega328p",
        "@Toolchains_Avr//platforms/cpu_frequency:8mhz"
    ],
    parents = ["@Toolchains_Avr//platforms:avr_common"]
)

platform(
    name = "MyArmPlatform",
    constraint_values = [
        "@bazel_tools//platforms:arm",
    ]
)