load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")
load("@AvrToolchain//:helpers.bzl", "default_embedded_binary")

default_embedded_binary(
    name = "main",
    srcs = ["main.c"],
    copts = cpu_frequency_flag(),
)

cc_binary(
    name = "normal_main",
    srcs = ["main.c"],
)

platform(
    name = "MyAVRPlatform",
    constraint_values = [
        "@AvrToolchain//platforms/mcu:atmega328p",
        "@AvrToolchain//platforms/cpu_frequency:8mhz"
    ],
    parents = ["@AvrToolchain//platforms:avr_common"]
)

platform(
    name = "MyArmPlatform",
    constraint_values = [
        "@bazel_tools//platforms:arm",
    ]
)